Phase 2 : Openapi overhaul
