# app/api/openapi.yaml
@@ -2,11 +2,71 @@ openapi: 3.0.0
 info:
   title: Artist Scraper
   description: Scrape my watchlist and push to database.
-  version: 0.0.1
+  version: "0.0.1"
 servers:
-  - url: /scrapy_bot
+  - url: /scrapy
     description: Main server url
 paths:
+  /ping_site:
+    get:
+      summary: Returns a side response code.
+      description: Optional extended description in CommonMark or HTML.
+      responses:
+        '200':
+          description: Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Status'
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Auth Failed
+        '403':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Access Denied
+        '404':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Not Found
+      operationId: connectors.ping_site
+  /ping_user:
+    get:
+      summary: Returns a side response code.
+      description: Optional extended description in CommonMark or HTML.
+      responses:
+        '200':
+          description: Response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Status'
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Auth Failed
+        '403':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Access Denied
+        '404':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Not Found
+      operationId: connectors.ping_user
   /users:
     get:
       summary: Returns a list of users.
@@ -17,7 +77,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/'
+                $ref: '#/components/schemas/KeyValue'
         '401':
           content:
             application/json:
@@ -36,9 +96,31 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
           description: Not Found
-      security:
-        - jwt: []
-      x-openapi-router-controller: openapi_server.controllers.users
+      operationId: connectors.get_users
+  /scrape_user:
+    post:
+      summary: Returns array of scraped user data
+      description: ..
+      parameters:
+        - in: query
+          name: username
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: A JSON array of data
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Scrape'
+        '404':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Not Found
+      operationId: connectors.scrape_user
   /update_users:
     post:
       summary: Updates artists list.
@@ -48,7 +130,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/'
+                $ref: '#/components/schemas/KeyValue'
         '401':
           content:
             application/json:
@@ -67,9 +149,77 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
           description: Not Found
-        security:
-          - jwt: []
-        x-openapi-router-controller: openapi_server.controllers.users
+      operationId: connectors.update_users
+  /update_social:
+    post:
+      summary: Updates artists social list.
+      responses:
+        '200':
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/KeyValue'
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Auth Failed
+        '403':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Access Denied
+        '404':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Not Found
+      operationId: connectors.update_social
+  /send_s3:
+    post:
+      summary: Send csv to S3.
+      responses:
+        '200':
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/KeyValue'
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Auth Failed
+        '403':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Access Denied
+        '404':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+          description: Not Found
+      operationId: connectors.send_s3
+  /update_stats:
+    post:
+      summary: update user stats
+      responses:
+        '200':
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/KeyValue'
+      operationId: connectors.update_stats
+
 components:
   schemas:
     Error:
@@ -114,11 +264,16 @@ components:
         - key
         - value
       type: object
-  securitySchemes:
-    jwt:
-      bearerFormat: JWT
-      scheme: bearer
-      type: http
-      x-bearerInfoFunc: openapi_server.controllers.security_controller
-
-      
+    Scrape:
+      properties:
+        message:
+          description: JSON block
+          type: array
+    Status:
+      properties:
+        code:
+          description: response code
+          type: string
+        message:
+          description: response message
+          type: string
