# app/main.py
@@ -1,38 +1,20 @@
-import time
 from logger import LoggerService
+import connexion
 
-from flask import Flask
-from config import DevConfg
-import redis
+_log = LoggerService().get_logger()
 
-from run import Processors
 
-app = Flask(__name__)
-cache = redis.Redis(host='redis', port=6739)
-app.config.from_object(DevConfg)
+def app_run():
+    _log.info("___SCRAPY STARTING___")
+    try:
+        app = connexion.App(__name__, port=8080, specification_dir='api/')
+        app.add_api('openapi.yaml', arguments={'title': 'Artist Scraper'})
+        app.run()
+        _log.info("___API SERVER STARTED___")
 
-# pros = Processors()
-#
-#
-# @app.route('/')
-# def home():
-#     pass
-#
-#
-# @app.route('/update_artist', methods=['GET'])
-# def update_artist():
-#     pros.add_update_artists()
-#
-#
-# @app.route('/update_social', methods=['GET'])
-# def update_social():
-#     pros.social_update()
-#
-#
-# @app.route('/send_s3', methods=['GET'])
-# def send_to_s3():
-#     pros.send_twitter_list_s3()
+    except Exception as e:
+        _log.error(f"[ERROR] Scrapy failed to start due to: {e}")
 
 
 if __name__ == '__main__':
-    app.run()
+    app_run()
